service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo-service
spec:
  selector:
    app: spring-boot-demo
  ports:
    - port: 8080
      targetPort: 8080
#      nodePort: 32321
#  type: NodePort
